made requested changes